--- a/familia-jaco.html
+++ b/familia-jaco.html
@@ -1,135 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Família Jaco - Confirmação de Presença</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Confirmação de Presença | Família Jaco</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Quicksand', sans-serif;
-      background: linear-gradient(to right, #f5f7fa, #c3cfe2);
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+      color: #333;
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 40px 20px;
+      min-height: 100vh;
+    }
+
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 16px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      width: 100%;
+      text-align: center;
     }
 
     h1 {
-      color: #333;
-      text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
-    p {
-      color: #555;
-      text-align: center;
-      max-width: 600px;
-      margin-bottom: 40px;
+    h2 {
+      margin-top: 0;
+      font-weight: normal;
+      color: #666;
     }
 
-    form {
-      background: white;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-      width: 100%;
-      max-width: 500px;
+    button {
+      padding: 12px 24px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .yes {
+      background-color: #4caf50;
+      color: white;
+    }
+
+    .no {
+      background-color: #f44336;
+      color: white;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .form-section {
+      display: none;
+      margin-top: 20px;
+      text-align: left;
     }
 
     label {
       display: block;
-      margin-bottom: 5px;
-      font-weight: 600;
+      margin-bottom: 8px;
     }
 
-    input, select, textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 1em;
+    input[type="checkbox"] {
+      margin-right: 8px;
     }
 
-    button {
-      background-color: #5a67d8;
+    .submit-btn {
+      background-color: #6200ea;
       color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 10px;
-      font-size: 1em;
-      cursor: pointer;
-      transition: 0.3s;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #434190;
-    }
-
-    .success-message {
-      background-color: #d4edda;
-      color: #155724;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 20px;
-      display: none;
-      text-align: center;
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
-  <h1>Família Jaco</h1>
-  <p>Estamos muito felizes em convidá-los para o nosso casamento! Por favor, confirmem sua presença preenchendo o formulário abaixo.</p>
+  <div class="container">
+    <h1>Casamento de Ana & Pedro</h1>
+    <h2>Família Jaco</h2>
+    <p>Você foi convidado com muito carinho 💖</p>
+    <p>Confirme sua presença até <strong>01/11/2025</strong></p>
 
-  <form action="https://formspree.io/f/{SEU_ID_AQUI}" method="POST" id="rsvp-form">
-    <label for="nome">Nome Completo</label>
-    <input type="text" id="nome" name="nome" required>
-
-    <label for="quantidade">Número de pessoas</label>
-    <input type="number" id="quantidade" name="quantidade" min="1" max="10" required>
-
-    <label for="presenca">Você vai ao casamento?</label>
-    <select id="presenca" name="presenca" required>
-      <option value="">Selecione</option>
-      <option value="Sim">Sim, com certeza!</option>
-      <option value="Não">Infelizmente não poderei ir</option>
-    </select>
-
-    <label for="mensagem">Mensagem ou observação</label>
-    <textarea id="mensagem" name="mensagem" rows="4" placeholder="Ex: Levo criança, tenho alergia, etc."></textarea>
-
-    <button type="submit">Confirmar Presença</button>
-
-    <div class="success-message" id="success-message">
-      Obrigado! Sua presença foi confirmada com sucesso.
+    <div>
+      <button class="yes" onclick="showForm(true)">Sim, eu vou</button>
+      <button class="no" onclick="showForm(false)">Não poderei ir</button>
     </div>
-  </form>
+
+    <div class="form-section" id="formSection">
+      <form id="rsvpForm" target="_blank" action="https://docs.google.com/forms/d/e/1FAIpQLSfK7KGYVYOgBl__a9b9c33QgAOkF4D8ZZ5hegBJFUUKo4xGJg/viewform?usp=dialog">
+        <label><input type="checkbox" name="entry.1234567890" value="Jaco" /> Jaco</label>
+        <label><input type="checkbox" name="entry.1234567890" value="Tia Maria" /> Tia Maria</label>
+        <label>Outro membro: <input type="text" name="entry.1234567890" /></label>
+
+        <input type="hidden" name="entry.9876543210" id="presencaField" value="" />
+
+        <button type="submit" class="submit-btn">Enviar Confirmação</button>
+      </form>
+    </div>
+  </div>
 
   <script>
-    const form = document.getElementById("rsvp-form");
-    const successMessage = document.getElementById("success-message");
-
-    form.addEventListener("submit", function (e) {
-      e.preventDefault();
-      const data = new FormData(form);
-      fetch(form.action, {
-        method: "POST",
-        body: data,
-        headers: {
-          'Accept': 'application/json'
-        }
-      }).then(response => {
-        if (response.ok) {
-          form.reset();
-          successMessage.style.display = "block";
-        } else {
-          alert("Erro ao enviar. Tente novamente mais tarde.");
-        }
-      });
-    });
+    function showForm(going) {
+      document.getElementById("formSection").style.display = "block";
+      document.getElementById("presencaField").value = going ? "Sim" : "Não";
+    }
   </script>
 </body>
 </html>
