--- a/familia-jaco.html
+++ b/familia-jaco.html
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Casamento de Ana & Pedro</h1>
+    <h1>Casamento de Yasmin & Jonathas</h1>
     <h2>Família Jaco</h2>
     <p>Você foi convidado com muito carinho 💖<br />  
     Clique no botão abaixo para confirmar sua presença e escolher quem vai da família.</p>
